@@ -6,7 +6,7 @@ aliashandler.associate-player: Associating {1} with {0}.
 checkcommand.name: check
 checkcommand.description: Check the database for associated records.
 checkcommand.permission-description: Allow users to check the database for associated records.
-checkcommand.usage: <player|address>
+checkcommand.usage: <player>
 checkcommand.no-names: no names
 checkcommand.one-name: one name
 checkcommand.many-names: {0,number} names
