@@ -1,4 +1,5 @@
 debugging: false
+send-anonymous-statistics: true
 automatic-updates:
   enabled: true
   method: notify
