@@ -1,5 +1,6 @@
-Changelog for Alias (v1.1.2-SNAPSHOT)
+Changelog for Alias (v1.2.0-SNAPSHOT)
 
+2012-08-06 02:34:24 +0100    reimplement delete command (James Richardson)
 2012-08-06 02:18:08 +0100    reimplemented checkcommand (James Richardson)
 2012-08-06 01:23:43 +0100    convert to using async event (James Richardson)
 2012-08-06 01:23:14 +0100    code clean up (James Richardson)
